# dragonfly

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_release.yml  checks.yml  tests.yml
src/dragonfly/: __about__.py  __main__.py  _commands.py  _debugger.py  _injection.py  _interface.py  _maxilla.c  _maxilla.pyi  _module.py  _notify.py  _settings.py  _tracing.py  _transformation.py  bite.py
src/dragonfly/_bootstrap/: preload.py  sitecustomize.py
src/dragonfly/_breakpoint/: model.py  registry.py
tests/: test_dragonfly.py  test_threads.py  utils.py
tests/targets/: importer.py  target.py  threads.py
